--- a/principal.css
+++ b/principal.css
@@ -30,10 +30,14 @@ body {
   transition: .5s;
 }
 
-/* body h1, h2, h3, h4, h5, p, a, button{
-  font-family: Montserrat;
-  color:#1E1E1E;
-} */
+body h1, h2 {
+  font-family: "Montserrat";
+  /* color:#1E1E1E; */
+}
+
+h2 {
+  font-size: min(35px, 10vw) !important;
+}
 
 section {
   display: grid;
@@ -42,9 +46,6 @@ section {
   /* background-color: #fff; */
 }
 
-h2 {
-  font-size: min(35px, 10vw) !important;
-}
 
 .tela-carregamento {
   position: fixed;
@@ -256,12 +257,13 @@ body.dark-mode p,a,i,span{
 
 .titulo-left {
   text-align: left !important;
+  
   /* color: #1E1E1E; */
   /* text-align: center; */
-  font-family: Montserrat;
+  font-family: "Montserrat";
   /* font-size: 40px; */
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   line-height: normal;
 }
 
@@ -356,11 +358,58 @@ body.dark-mode p,a,i,span{
 
 
 
-
-
 /* Navbar */
 
-nav {
+div > .interface{
+  display: flex;
+  align-items: center;
+  text-align: right;
+  /* justify-content: space-around; */
+  /* margin: 20px 150px; */
+}
+
+nav.menu-desktop {
+  /* display: flex !important; */
+  margin-inline: auto !important;
+  justify-content: space-between !important;
+  align-items: center;
+  height: auto !important;
+  padding: 25px !important;
+  transition: 0.5s ease-in !important;
+  width: 100%;
+}
+
+nav ul{
+  list-style-type: none;
+  display: flex;
+  position: absolute;
+  right: 0;
+  padding-right: 130px !important;
+}
+
+nav.menu-desktop ul li a {
+  color: #FFF;
+  text-align: center;
+  font-family: "Montserrat";
+  font-size: 12px !important;
+  font-style: normal;
+  font-weight: 300 !important;
+  line-height: 30px;
+  /* 200% */
+  letter-spacing: 1.875px;
+}
+
+.logopersona{
+  width: 45px;
+  height: auto;
+  z-index: 99990;
+  transition: 0.4s ease-in !important;
+}
+
+
+/* 
+
+div nav.menu-desktop {
   margin-inline: auto !important;
   display: flex !important;
   justify-content: space-between !important;
@@ -371,26 +420,148 @@ nav {
   width: 100%;
 }
 
-nav ul li a {
+div nav ul{
+  list-style-type: none;
+}
+
+div nav.menu-desktop ul{
+  align-items: center;
+  
+}
+
+div nav.menu-desktop ul li{
+  display: inline-block;
+}
+
+div nav.menu-desktop ul li a {
+  color: #FFF;
   text-align: center;
   font-family: Montserrat;
   font-size: 13px !important;
   font-style: normal;
   font-weight: 100 !important;
   line-height: 30px;
-  /* 200% */
   letter-spacing: 1.875px;
-}
+} */
+
+
 
 ul, li, a .padding-nav {
   padding: 0px 10px !important;
 }
 
 
+
+/* Menu Mobile */
+@media screen and (max-width: 999px){
+  .esconder-mobile{
+    display: none;
+  }
+
+  .btn-abrir-menu i{
+    display: block !important;
+  }
+}
+
+.menu-mobile{
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 99999;
+  background-color: #1e1e1ef6;
+  height: 100vh;
+  width: 0vw;
+  overflow: hidden;
+  transition: .5s;
+}
+
+.menu-mobile.abrir-menu{
+  width: 42vw;
+}
+
+.btn-fechar{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.btn-abrir-menu{
+  /* position: absolute;
+  top: 0;
+  right: 0; */
+  /* padding: 25px 30px; */
+  transition: 0.3s ease-in;
+}
+
+.btn-abrir-menu i {
+  color: #fff;
+  font-size: 40px;
+  display: none;
+  text-align: right;
+}
+
+
+.menu-mobile.abrir-menu ~ .overlay-menu{
+  display: block;
+}
+
+.menu-mobile .btn-fechar{
+  padding: 30px 40px;
+}
+
+.menu-mobile .btn-fechar i{
+  color: #FFF;
+  font-size: 35px;
+  text-align: right;
+  /* cursor: pointer; */
+}
+
+nav.menu-mobile ul{
+  flex-direction: column;
+  text-align: right;
+  padding: 60px 20px !important;
+}
+
+nav.menu-mobile  ul li{
+  padding: 20px 0px !important;
+  justify-content: space-around;
+}
+
+nav.menu-mobile  ul li a{
+  display: block;
+  font-family: "Montserrat";
+  color: #FFF;
+  font-size: 13px;
+  text-align: right;
+  align-items: end;
+  justify-content: space-between;
+  transition: 0.4s;
+}
+
+nav.menu-mobile  ul li a:hover{
+  background-color: #FFF;
+  border-radius: 10px;
+  color: #1b5b5f;
+}
+
+.overlay-menu{
+  display: none;
+  background-color: #00000099;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99990;
+}
+
 /* Itens Navbar Collapse */
 
+
+
 /* #navbarsExample07 {
-  background-color: #ffffff !important;
+  background-color: #b0aeae !important;
+  width: 35vw;
   padding: 10px;
 } */
 
@@ -404,6 +575,10 @@ ul, li, a .padding-nav {
 
 
 /* Itens Nabar */
+
+#ulnav{
+  align-content: end !important;
+}
 
 #ulnav li a {
   transition: .3s;
@@ -460,6 +635,8 @@ nav.rolagem {
   transition: 0.4s ease-in !important;
   padding: 10px 30px !important;
   box-shadow: 0px 0px 5px 0px #2c2b2b5e;
+  /* opacity: 0.8; */
+  /* padding: 30px  !important; */
   /* background: linear-gradient(#1E1E1E, #373737); */
   /* border-bottom: #ffffff solid 1px; */
 }
@@ -475,13 +652,6 @@ nav.rolagem ul li a:hover {
   /* font-weight: 200 !important; */
 }
 
-nav.rolagem span {
-  color: #ffffff !important;
-  height: 100px !important;
-  width: 100px !important;
-  border: none;
-
-}
 
 nav.rolagem li a {
   transition: .3s;
@@ -525,7 +695,11 @@ nav.rolagem li a:hover::before {
   transition: transform .4s;
 }
 
-
+nav.rolagem .btn-abrir-menu{
+  /* padding: 25px 20px; */
+  align-items: center !important;
+  transition: 0.4s ease-in-out;
+}
 
 
 /* Fim Navbar Scroll */
@@ -1053,6 +1227,7 @@ section.portifolio .flex {
 
 .textura {
   background-image: url("img/textura.png");
+  background-attachment: fixed;
 }
 
 .flex {
@@ -1083,6 +1258,7 @@ section.portifolio .flex {
   padding: 30px;
   opacity: 1;
   transition: .5s;
+  
 }
 
 .overlay:hover {
@@ -1159,11 +1335,11 @@ section.portifolio .flex {
 
 .projetos .projeto{
   position: relative;
+  display: block;
   width: 250px;
   height: 400px;
   margin: 10px;
   margin-bottom: 10px;
-  display: block;
   transition: .5s !important;
   border-radius: 15px;
   box-shadow: 6px 0px 10px 1px #b1b0b075;
@@ -1187,11 +1363,13 @@ section.portifolio .flex {
 .image {
   position: relative;
   background-size: cover;
+  background-position: 50% 0%;
   border-radius: 15px;
   top: 0;
   left: 0;
   width: 100%;
-  height: 450px;
+  height: 350px;
+  transition: 2s;
 }
 
 .image:before {
@@ -1212,13 +1390,12 @@ section.portifolio .flex {
 .image:hover:before {
   background-color: #00000096;
   border-radius: 15px;
-
   opacity: 0.8;
 }
 
 
 .ptitle {
-  font-size: 25px;
+  font-size: 22px;
   font-weight: bold;
   text-align: left;
 }
@@ -1363,6 +1540,7 @@ section.portifolio .flex {
 
 .planosbk {
   background-image: url(img/servicos.png) !important;
+  background-attachment: fixed;
 }
 
 .planosline {
@@ -1459,8 +1637,8 @@ section.portifolio .flex {
 .cardplanos {
   display: block;
   flex-direction: column;
-  width: calc(33.33% - 20px);
-  min-width: 260px;
+  width: calc(25% - 20px);
+  min-width: 230px;
   transition: all 0.4s;
 }
 
@@ -1604,11 +1782,17 @@ section.portifolio .flex {
 .contfaleconosco{
   /* background-image: url(img/fundoemail.png); */
   /* background-image: url(img/faleconosco-bk.jpg); */
-  background-color: #1E1E1E;
+  /* background-color: #1E1E1E; */
+  background: radial-gradient(rgb(27, 73, 87), rgb(1, 21, 28));
+    color: rgb(230, 230, 230);
   background-repeat: no-repeat;
   background-size: cover;
 }
 
+.formulario-email{
+  background-color: #fff !important;
+  color: #000 !important;
+}
 
 .formulario-email h1 p{
   color: #000 !important;
