--- a/principal.css
+++ b/principal.css
@@ -260,13 +260,40 @@ body.dark-mode p,a,i,span{
   transition: all 1s;
 }
 
+.fall {
+  transform: translateY(-100px);
+  animation: 1.2s slideIn ease-in-out forwards 1s;
+  z-index: 10;
+  opacity: 0;
+  position: relative;
+}
 
+.fall::before {
+  content: '';
+  background-color: var(--secondary-color);
+  position: absolute;
+  animation: 1s underline ease-in-out forwards 2s;
+}
+
+
+@keyframes slideIn {
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes underline {
+  100% {
+    width: 100%;
+  }
+}
 
 
 
 /* Classes Globais Personalizadas */
 
-span {
+.span-dec {
   /* color: #FDB724; */
   font-weight: bold;
 }
@@ -434,7 +461,6 @@ nav.menu-desktop ul li a {
 
 /* Contato Dropdown */
 .dropbtn {
-  /* background-color: #4CAF50; */
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -468,12 +494,9 @@ nav.menu-desktop ul li a {
   width: 200px;
   transition: .2s;
   cursor: pointer;
-  /* border-bottom: 1px solid #FFF; */
 }
 
 .dropdown-content li:hover {
-  /* background-color: #ffffff33; */
-  /* padding: 10px 14px !important; */
   font-size: 10px !important;
   font-size: 16px;
   border-radius: 10px 0px 10px;
@@ -529,9 +552,6 @@ nav.menu-desktop ul li a {
   font-size: 12px;
 }
 
-/* .dropdown-persona:hover .dropbtn {
-  background-color: #3e8e41;
-} */
 
 .logopersona{
   width: 45px;
@@ -539,44 +559,6 @@ nav.menu-desktop ul li a {
   z-index: 99990;
   transition: 0.4s ease-in !important;
 }
-
-
-/* 
-
-div nav.menu-desktop {
-  margin-inline: auto !important;
-  display: flex !important;
-  justify-content: space-between !important;
-  align-items: center;
-  height: auto !important;
-  padding: 25px !important;
-  transition: 0.5s ease-in !important;
-  width: 100%;
-}
-
-div nav ul{
-  list-style-type: none;
-}
-
-div nav.menu-desktop ul{
-  align-items: center;
-  
-}
-
-div nav.menu-desktop ul li{
-  display: inline-block;
-}
-
-div nav.menu-desktop ul li a {
-  color: #FFF;
-  text-align: center;
-  font-family:"Montserrat";
-  font-size: 13px !important;
-  font-style: normal;
-  font-weight: 100 !important;
-  line-height: 30px;
-  letter-spacing: 1.875px;
-} */
 
 
 
@@ -992,6 +974,18 @@ div .ondas {
 
 
 
+.mysvg {
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  right: 0;
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 30px;
+}
+
+
+/* Conteudo da Tela Inicial */
 
 .herobk {
   background-image: url('img/init.jpg') !important;
@@ -1004,52 +998,6 @@ div .ondas {
   background-size: cover;
 }
 
-.mysvg {
-  position: absolute !important;
-  top: 0;
-  left: 0;
-  right: 0;
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 30px;
-  /* background-image: url('onda.svg') !important; */
-  /* transform: translateY(-100px); */
-  /* background-position: 0 0; */
-  /* background-repeat: no-repeat; */
-  /* background-size: 100%; */
-}
-
-.fall {
-  transform: translateY(-100px);
-  animation: 1.2s slideIn ease-in-out forwards 1s;
-  z-index: 10;
-  opacity: 0;
-  position: relative;
-}
-
-.fall::before {
-  content: '';
-  background-color: var(--secondary-color);
-  position: absolute;
-  animation: 1s underline ease-in-out forwards 2s;
-}
-
-
-@keyframes slideIn {
-  100% {
-    transform: translateY(0px);
-    opacity: 1;
-  }
-}
-
-@keyframes underline {
-  100% {
-    width: 100%;
-  }
-}
-
-
-
 .vertical {
   position: relative;
   margin: auto;
@@ -1057,6 +1005,13 @@ div .ondas {
   padding: 20px;
   transform: translateY(40%);
 }
+
+.visit-card {
+  color: #fff !important;
+}
+
+
+/* Tipografia */
 
 .somos-incept {
   font-family: "aquus", sans-serif;
@@ -1072,9 +1027,37 @@ div .ondas {
   -webkit-text-fill-color: transparent;
 }
 
-.visit-card {
-  color: #fff !important;
+
+
+/* Animação Maquina de Escrever */
+
+/* #typing {
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typing 3s steps(30, end), blink-caret 0.5s step-end infinite;
 }
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: #ffffff00;
+  }
+} */
+
+
+
 
 .txt-init {
   font-size: min(17px, 4vw) !important;
